Commit Pxch y Movimientos

--- a/Sistema.Web/appsettings.json
+++ b/Sistema.Web/appsettings.json
@@ -8,7 +8,9 @@
     //"Conexion": "Server=DESKTOP-HENV9O1;initial catalog=dbgap;user id=sa;password=@kiel2019;persist security info=True"
     //"Conexion": "Server=DESKTOP-HENV9O1;initial catalog=sandbox;user id=sa;password=@kiel2019;persist security info=True"
     //"Conexion": "Server=192.168.0.222;initial catalog=sandbox;user id=sa;password=@kiel2019;persist security info=True",
-    "Conexion": "Server=192.168.0.222;initial catalog=concbanc;user id=sa;password=@kiel2019;persist security info=True"
+    //"Conexion": "Server=192.168.0.222;initial catalog=concbanc;user id=sa;password=@kiel2019;persist security info=True",
+    "Conexion": "Server=WIN-8JIAP46EDC6;initial catalog=concbanc;user id=sa;password=@kiel2019;persist security info=True"
+
   },
   "Logging": {
     "LogLevel": {
